--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     text-align: center;
 }
 .navbar{
-    background-color: #193a7f;
+    background-color: #ffffff;
 }
 .btn{
     background-color: #193a7f;
