--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,13 @@ a{
   color: white;
 }
 .card-bg-batozar{
-    background-image: url('../images/ceros.JPG');
+    background-image: url('../images/batozar.JPG');
   background-size: cover;
   background-position: center;
   color: white;
 }
 .card-bg-ceros{
-    background-image: url('../images/batozar.PNG');
+    background-image: url('../images/ceros.PNG');
   background-size: cover;
   background-position: center;
   color: white;
@@ -102,4 +102,5 @@ a{
 .list-group li{
     font-size: small;
 }
+
 
